# SpectraToQueries

./: .Rbuildignore  .gitignore  404.html  CITATION.cff  CITATION.html  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  NAMESPACE  NEWS.html  NEWS.md  OPTIMIZATION_SUMMARY.md  README.Rmd  README.md  README.qmd  _pkgdown.yml  authors.html  codemeta.json  freeze.rds  grateful-refs.bib  index.html  index.md  pkgdown.yml  pyproject.toml  quarto_website.yml  robots.txt  search.json  sitemap.xml
.github/workflows/: external-use.yaml  update-citation-cff.yaml
R/: SpectraToQueries-package.R  combine_ions_minimal.R  create_dir.R  create_matrix.R  filter_matrix.R  fix_binned_mzs.R  generate_combinations.R  globals.R  harmonize_mzs.R  mcapply_hack.R  normalize_peaks.R  parse_yaml.R  perform_list_of_queries.R  perform_query.R  spectra_to_queries.R
altdoc/: quarto_website.yml
data/interim/: queries-grouped.tsv  queries.tsv
data/source/spectra/: MIADB-monomers.mgf  export_traitement_python_matchms-squelettes-tries-grouped.mgf  export_traitement_python_matchms-squelettes-tries-new.mgf  export_traitement_python_matchms-squelettes-tries.mgf
inst/: CITATION  WORDLIST  params.yaml  paths.yaml
inst/extdata/: spectra.rds  spectra_grouped.rds
inst/scripts/: install.R  skeletons_to_groups.R  spectra_to_queries.R
man/: SpectraToQueries-package.Rd  combine_ions_minimal.Rd  combine_ions_minimal.html  contains_all_mz.Rd  contains_all_mz.html  create_dir.Rd  create_dir.html  create_matrix.Rd  create_matrix.html  filter_matrix.Rd  filter_matrix.html  fix_binned_mzs.Rd  fix_binned_mzs.html  generate_combinations.Rd  generate_combinations.html  generate_combinations_progress.Rd  generate_combinations_progress.html  harmonize_mzs.Rd  harmonize_mzs.html  normalize_peaks.Rd  normalize_peaks.html  parse_yaml.Rd  perform_list_of_queries.Rd  perform_list_of_queries.html  perform_list_of_queries_progress.Rd  perform_list_of_queries_progress.html  perform_query.Rd  perform_query.html  spectra_to_queries.Rd  spectra_to_queries.html
news/: index.html
reference/: SpectraToQueries-package.html  SpectraToQueries.html  create_dir.html  create_matrix.html  filter_matrix.html  fix_binned_mzs.html  generate_combinations.html  generate_combinations_progress.html  harmonize_mzs.html  index.html  normalize_peaks.html  perform_list_of_queries.html  perform_list_of_queries_progress.html  perform_query.html  spectra_to_queries.html
tests/: testthat.R
tests/testthat/: test-functions.R
